--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.App img {
+  height: 230px;
+  width: 230px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
